@@ -25,6 +25,7 @@ import build.spin.Resource;
 import build.spin.module.modulesystem.CompilerArguments;
 import build.spin.module.modulesystem.pom.ConfigNode;
 import build.spin.module.modulesystem.pom.GA;
+import build.spin.module.modulesystem.pom.Plugin;
 
 import java.nio.file.Path;
 import java.util.Optional;
@@ -40,10 +41,12 @@ import java.util.stream.Stream;
  *   <li>{@code <release>N</release>} → {@code --release N}</li>
  *   <li>{@code <source>N</source>} → {@code -source N} (only when {@code <release>} is absent)</li>
  *   <li>{@code <target>N</target>} → {@code -target N} (only when {@code <release>} is absent)</li>
- *   <li>{@code <enablePreview>true</enablePreview>} → {@code --enable-preview}</li>
  *   <li>{@code <compilerArgs>} children: each {@code <arg>} or {@code <compilerArg>} text content
  *       is emitted as a single token</li>
  * </ul>
+ * {@code <enablePreview>true</enablePreview>} is recognized too, but not as one of these opaque
+ * tokens — see {@link #enablePreview(Project)}, which callers combine with their own opinion on
+ * preview features rather than have it silently forced into this class's token stream.
  *
  * @author reed.vonredwitz
  * @since Apr-2026
@@ -72,9 +75,30 @@ public class PomBasedCompilerArguments
             config.flagIfPresent("release", "--release"),
             hasRelease ? Stream.<String>empty() : config.flagIfPresent("source", "-source"),
             hasRelease ? Stream.<String>empty() : config.flagIfPresent("target", "-target"),
-            config.booleanFlag("enablePreview", "--enable-preview"),
             compilerArgs
         ).flatMap(s -> s);
+    }
+
+    /**
+     * Reads the project's effective pom and returns {@code maven-compiler-plugin}'s declared
+     * {@code <enablePreview>} value, if any. Unlike {@code maven-compiler-plugin}, {@code
+     * maven-javadoc-plugin} has no such parameter, so this lives here rather than in the shared
+     * {@link AbstractPomBasedArguments} base.
+     */
+    @Override
+    public Optional<Boolean> enablePreview(final Project project) {
+        return plugin(project)
+            .map(Plugin::configuration)
+            .flatMap(PomBasedCompilerArguments::enablePreview);
+    }
+
+    /**
+     * The {@link #enablePreview(Project)} → {@code <enablePreview>} mapping, split out from the
+     * {@link Project}-resolving lookup above so it's unit-testable against a synthetic
+     * {@link ConfigNode} the same way {@link #toArgs(ConfigNode)} is.
+     */
+    static Optional<Boolean> enablePreview(final ConfigNode configuration) {
+        return configuration.textChild("enablePreview").map(Boolean::parseBoolean);
     }
 
     /**
